more security fix

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,115 @@
-# Development mode - set to true for dev, false for production
-# Use docker-compose.dev.yml for dev (port 3000)
-# Use docker-compose.yml for production (port 4000)
+# =============================================================================
+# SailfishOS App Catalog - Environment Configuration
+# =============================================================================
+# Copy this file to .env and update the values for your environment.
+# NEVER commit the actual .env file to version control!
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# APPLICATION MODE
+# -----------------------------------------------------------------------------
+# Development mode - set to 'true' for dev, 'false' for production
+# Development mode:
+#   - Disables secure cookie settings (allows HTTP)
+#   - Disables HSTS headers
+#   - Shows debug information
+# Production mode:
+#   - Enforces HTTPS-only cookies
+#   - Enables HSTS headers
+#   - Hides debug information
 DEV_MODE=false
 
-# Flask secret key - CHANGE THIS IN PRODUCTION
-# Generate with: python -c "import secrets; print(secrets.token_hex(32))"
-SECRET_KEY=your-secret-key-here
+# -----------------------------------------------------------------------------
+# SECURITY - CRITICAL SETTINGS
+# -----------------------------------------------------------------------------
+# Flask secret key - MUST BE CHANGED IN PRODUCTION
+# Used for session signing, CSRF tokens, and other security features
+# Generate a secure key with: python -c "import secrets; print(secrets.token_hex(32))"
+# WARNING: Using the default key in production is a severe security risk!
+SECRET_KEY=your-secret-key-here-change-in-production
 
-# App version (displayed in footer)
-APP_VERSION=1.0.0
-
-# hCaptcha configuration
+# -----------------------------------------------------------------------------
+# hCAPTCHA CONFIGURATION
+# -----------------------------------------------------------------------------
 # Get your keys from https://www.hcaptcha.com/
-# These are test keys that always pass - replace with real keys in production
+# hCaptcha protects forms against spam and automated abuse
+#
+# The keys below are hCaptcha TEST KEYS that always pass verification.
+# They are suitable for development but MUST be replaced in production!
+#
+# Site Key: Used in frontend (visible to users)
+# Secret Key: Used in backend for verification (keep secret!)
 HCAPTCHA_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
 HCAPTCHA_SECRET_KEY=0x0000000000000000000000000000000000000000
+
+# -----------------------------------------------------------------------------
+# APPLICATION METADATA
+# -----------------------------------------------------------------------------
+# App version displayed in footer
+# Update this when deploying new versions
+APP_VERSION=1.0.0
+
+# -----------------------------------------------------------------------------
+# SECURITY FEATURES (Enabled by Default)
+# -----------------------------------------------------------------------------
+# The following security features are enabled automatically:
+#
+# Rate Limiting (Flask-Limiter):
+#   - Global: 200 requests/day, 50 requests/hour per IP
+#   - Login: 10 attempts/minute
+#   - Registration: 5/hour
+#   - Report submission: 20/hour
+#   - App submission: 10/hour
+#
+# Account Lockout:
+#   - 5 failed login attempts = 15 minute lockout
+#
+# Session Security (Production mode):
+#   - Secure cookies (HTTPS only)
+#   - HttpOnly cookies (no JavaScript access)
+#   - SameSite=Lax (CSRF protection)
+#   - HSTS enabled (force HTTPS)
+#
+# Security Headers:
+#   - X-Frame-Options: SAMEORIGIN
+#   - X-Content-Type-Options: nosniff
+#   - X-XSS-Protection: 1; mode=block
+#   - Content-Security-Policy: configured for hCaptcha
+#   - Referrer-Policy: strict-origin-when-cross-origin
+#
+# CORS:
+#   - Only /icons/* allows cross-origin requests
+#   - All other routes same-origin only
+#
+# Two-Factor Authentication:
+#   - TOTP-based 2FA available for all users
+#   - Requires pyotp and qrcode packages
+
+# -----------------------------------------------------------------------------
+# DATA STORAGE
+# -----------------------------------------------------------------------------
+# Data is stored in JSON files in the ./data directory:
+#   - data/apps.json      - App catalog
+#   - data/categories.json - App categories
+#   - data/reports.json   - User compatibility reports
+#   - data/users.json     - User accounts
+#   - data/logs.json      - Audit logs
+#   - data/icons/         - Downloaded app icons
+#
+# File locking is used to prevent race conditions.
+# Backups can be created via /dashboard/backup (admin only).
+
+# -----------------------------------------------------------------------------
+# DEPLOYMENT NOTES
+# -----------------------------------------------------------------------------
+# Docker Compose files:
+#   - docker-compose.yml     - Production (port 4000)
+#   - docker-compose.dev.yml - Development (port 3000)
+#
+# Cloudflare/Proxy Support:
+#   - Rate limiting respects CF-Connecting-IP and X-Forwarded-For headers
+#   - Ensure your proxy is configured to pass these headers
+#
+# HTTPS:
+#   - Configure HTTPS at the reverse proxy level (nginx, Cloudflare, etc.)
+#   - The application expects to be behind HTTPS in production
